# skillet-python

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: sdk-quality.yml  trigger-doc-sync.yml
scripts/: check_release_hygiene.py
src/skillet/: __init__.py  client.py  exceptions.py  models.py  session.py  workflow.py
tests/: test_sdk.py
