[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "skillet-sdk"
version = "0.1.0"
description = "Python SDK for the Skillet API — agentic skills and context engineering"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
]

[project.urls]
Homepage = "https://skillet.dev"
Documentation = "https://docs.skillet.dev"
Repository = "https://github.com/YOUR_ORG/skillet-python"

[tool.hatch.build.targets.wheel]
packages = ["src/skillet"]
