[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "skillet-sdk"
version = "0.1.0"
description = "Python SDK for the Skillet API - agentic skills and context engineering"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest>=8,<9",
  "twine>=6,<7",
]

[project.urls]
Repository = "https://github.com/trumandaniels/skillet-python"
Issues = "https://github.com/trumandaniels/skillet-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/skillet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
